# carla_simulation

./: CMakeLists.txt  README.md  package.xml
assets/: carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch.py  mscoco_label_map.pbtxt  objects.json  setup.sh
carla_simulation/: sort.py
config/: params.yaml
launch/: simulation.launch.py
msg/: LaneGeometry.msg  LaneParameters.msg  Object.msg  ObjectArray.msg
scripts/: lane_detection.py  object_detection.py  object_localization.py  object_tracking.py  output_view.py
